Creacion de cliente con conexion a BDD